--- a/pyCrashCourse.ipynb
+++ b/pyCrashCourse.ipynb
@@ -196,7 +196,7 @@
     "print(numbers) # [\"one\", \"two\", \"three\"]\n",
     "\n",
     "# Remove elements by value\n",
-    "numbers.remove(\"two\") # [\"one\", \"three\"]. This will remove only the first occurence of an array.\n",
+    "numbers.remove(l) # [\"one\", \"three\"]. This will remove only the first occurence of an array.\n",
     "\n",
     "# Sorting Value\n",
     "alpha = [\"z\", \"a\", \"c\"]\n",
